RESOLVED FIXED47919
Fix multiple index support in IndexedDB
https://bugs.webkit.org/show_bug.cgi?id=47919
Summary Fix multiple index support in IndexedDB
Jeremy Orlow
Reported 2010-10-19 12:21:18 PDT
Fix multiple index support in IndexedDB
Attachments
Patch (14.45 KB, patch)
2010-10-19 12:29 PDT, Jeremy Orlow
no flags
Jeremy Orlow
Comment 1 2010-10-19 12:29:00 PDT
Jeremy Orlow
Comment 2 2010-10-19 13:03:00 PDT
Nate, do you have time to look at this? I'm hoping to get it in for the next dev channel release.
WebKit Commit Bot
Comment 3 2010-10-19 13:54:48 PDT
Comment on attachment 71192 [details] Patch Rejecting patch 71192 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=abarth-cq-sl', 'apply-attachment', '--force-clean', '--non-interactive', '--quiet', 71192]" exit_code: 2 Cleaning working directory Updating working directory Failed to run "['WebKitTools/Scripts/update-webkit']" exit_code: 2 Full output: http://queues.webkit.org/results/4517004
Adam Barth
Comment 4 2010-10-19 14:49:32 PDT
Adam's machine's checkout was wedged (eseidel)
Jeremy Orlow
Comment 5 2010-10-19 15:08:53 PDT
Comment on attachment 71192 [details] Patch Actually, I'll just land by hand.
Jeremy Orlow
Comment 6 2010-10-19 15:10:33 PDT
Comment on attachment 71192 [details] Patch Clearing flags on attachment: 71192 Committed r70093: <http://trac.webkit.org/changeset/70093>
Jeremy Orlow
Comment 7 2010-10-19 15:10:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.