2010-10-19  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by Nate Chapin.

        Fix multiple index support in IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=47919

        Modify an existing test to verify behavior and add another test for
        something I thought might have been related (but wasn't, but it still
        seems like a good test).

        * storage/indexeddb/index-basics-expected.txt:
        * storage/indexeddb/index-basics.html:
        * storage/indexeddb/queued-commands-expected.txt: Added.
        * storage/indexeddb/queued-commands.html: Added.
2010-10-19  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by Nate Chapin.

        Fix multiple index support in IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=47919

        Fix 2 bugs that caused the IndexData of all but the last index to be
        properly updated:
        * The objectStoreDataId is NOT unique if there are multiple indexes. So
          remove the constraint.
        * Do not delete all existing entries with that objectStoreDataId before
          adding an entry for each index. Only do it once at the beginning.

        Test: storage/indexeddb/queued-commands.html
            + index-basics.html modified

        * storage/IDBFactoryBackendImpl.cpp:
        (WebCore::createTables):
        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::deleteIndexData):
        (WebCore::putIndexData):
        (WebCore::IDBObjectStoreBackendImpl::putInternal):

Canonical link: https://commits.webkit.org/60655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70093 268f45cc-cd09-0410-ab3c-d52691b4dbfc